Added updates